Add search page and update index.html

--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -15,7 +15,7 @@
 
     <nav>
       <a href="">Inicio</a>
-      <a href="">Empleos</a>
+      <a href="search/search.html">Empleos</a>
     </nav>
 
     <div>
