Color correction of the search and "upload CV" buttons

--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -16,6 +16,8 @@
     <nav>
       <a href="">Inicio</a>
       <a href="">Empleos</a>
+      <a href="">Empresas</a>
+      <a href="">salarios</a>
     </nav>
 
     <div>
@@ -97,20 +99,6 @@
     <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
   </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-  <footer style="padding-bottom: 100000px">
-
-  </footer>
 </body>
 
 </html>
