The search results section and pagination have been added. Page complete.

--- a/00-html-css/search-results.html
+++ b/00-html-css/search-results.html
@@ -30,7 +30,7 @@
 
     <!--seccion de busqueda-->
     <main>
-        <section>
+        <section class="search-section">
             <h1>Encuentra tu próximo trabajo</h1>
             <p>Explora miles de oportunidades en el sector tecnológico</p>
 
@@ -45,7 +45,7 @@
                     </svg>
                     <input type="text" placeholder="Buscar trabajos, empresas o habilidades"/>
                 </div>
-
+                <!--Filtros de busqueda-->
                 <div class="filters">
                     <select>
                         <option selected >Tecnología</option>
@@ -76,13 +76,72 @@
                         <option value="senior">Senior</option>
                     </select>
                 </div>
-
             </form>
+        </section>
+        <!--seccion de resultados de busqueda-->
+        <section class="results-section">
+
+            <h2>Resultados de búsqueda</h2>
+
+            <article>
+                <div>
+                    <h3>Ingeniero de Software</h3>
+                    <small>Tech Solution Inc. | Remoto</small>
+                    <p>Buscamos un ingeniero de software con experiencia en desarrollo web y conociminetos en Javascript, React y Node.js. El candidato ideal debe ser capaz de trabajar en equipo y tener buenas habilidades de comunicación.</p>
+                </div>
+                <div>
+                    <a href="">Aplicar</a>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <h3>Analista de Datos</h3>
+                    <small>Data Driven Co. | Ciudad de México</small> 
+                    <p>Estamos buscando un analista de datos con experiencia en el manejo de grandes conjuntos de datos y herramientas de visualización. Se requiere conocimiento en SQL, Python y R.</p>
+                </div>
+                <div>
+                    <a href="">Aplicar</a>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <h3>Desarrollador de Aplicaciones Móviles</h3>
+                    <small>Mobile Apps Ltd. | Guadalajara</small>
+                    <p>Buscamos un desarrollador de aplicacione móviles con experiencia en IOS y/o Andorid. El candidato debe tener conocimientos en Swift, Kotlin y el desarrollo de interfaces de usuario.</p>
+                </div>
+                <div>
+                    <a href="">Aplicar</a>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <h3>Ingeniero de DevOps</h3>
+                    <small>Cloud Services SA | Remoto</small>
+                    <p>Estamos buscando un ingeniero de DevOps con experiencia en la gestión de infraestructuras en la nube, automatización de procesos y herramientas de integración continua. Se requiere conocimiento en AWS, Azure o GCP</p>
+                </div>
+                <div>
+                    <a href="">Aplicar</a>
+                </div>
+            </article>
+        </section>
+
+        <!--paginacion de resultados-->
+        <section class="pagination">
+        <a href=""> < </a>
+                <a href="">1</a> 
+                <a href="">2</a> 
+                <a href="">3</a> 
+                <a href="">4</a>
+                <a href="">5</a>
+        <a href=""> > </a>
         </section>
     </main>
 
     <footer>
-
+        <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
     </footer>
 </body>
 
