--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -4,57 +4,59 @@
 <head>
   <title>DevJobs - Inicio</title>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores en DevJobs.">
+  
 
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./style/index/mobile.css" />
+  <link rel="stylesheet" href="./style/index/tablet.css" media="(min-width: 800px)" />
+  <link rel="stylesheet" href="./style/index/desktop.css" media="(min-width: 1024px)"/>
 </head>
 
 <body>
   <header>
-    <h1>DevJobs</h1>
-
-    <nav>
-      <a href="">Inicio</a>
-      <a href="">Empleos</a>
-    </nav>
-
+    <div class="header-container-top">
+      <h2>
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <polyline points="16 18 22 12 16 6"></polyline>
+        <polyline points="8 6 2 12 8 18"></polyline>
+        </svg>
+        DevJobs
+      </h2>
+      <nav>
+        <a href="#">Inicio</a>
+        <a href="./empleos.html">Empleos</a>      
+      </nav>
+    </div>   
     <div>
-      <a href="">Publicar un empleo</a>
-      <a href="">Iniciar sesión</a>
+      <a href="" class="header-div-btn-primary">Publicar un empleo</a>
+      <a href="" class="header-div-btn-secondary">Iniciar sesión</a>
     </div>
   </header>
-
   <main>
-    <section>
-      <img src="./background.webp" width="200" />
-
-      <h1>Encuentra el trabajo de tus sueños</h1>
-
-      <p>Únete a la comunidad más grande de desarrolladores y encuentra tu próxima oportunidad.</p>
-
+    <section class="main-section-top">
+      <h1>Encuentra el trabajo de tus sueños</h3>
+      <p>Únete a la comunidad más grande de desarrolladores y encuentra tu próxima oportunidad</p>
       <form role="search">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
           class="icon icon-tabler icons-tabler-outline icon-tabler-search">
           <path stroke="none" d="M0 0h24v24H0z" fill="none" />
           <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
           <path d="M21 21l-6 -6" />
-        </svg>
-
-        <input required type="text" placeholder="Buscar empleos por título, habilidad o empresa">
-
+          </svg>
+          <input type="text" placeholder="Busca empleos por título, habilidad o empresa">
+        </div>        
         <button type="submit">Buscar</button>
       </form>
     </section>
-
-    <section>
-
+    <section class="main-section-bottom">
       <header>
-        <h2>¿Por qué DevJobs?</h2>
-        <p>DevJobs es la principal plataforma de búsqueda de empleo para desarrolladores. Conectamos a los mejores
-          talentos con las empresas más innovadoras.</p>
+        <h2>¿Por qué DevJobs</h2>
+        <p>DevJobs es la principal plataforma de búsqueda de empleo para desarrolladores. Conectamos a los mejores talentos con las empresas más innovadoras.</p>
       </header>
-
       <footer>
         <article>
           <svg fill="currentColor" height="32" viewBox="0 0 256 256" width="32" xmlns="http://www.w3.org/2000/svg"
@@ -64,9 +66,8 @@
             </path>
           </svg>
           <h3>Encuentra el trabajo de tus sueños</h3>
-          <p>Busca miles de empleos de las mejores empresas de todo el mundo.</p>
+          <p>Busca miles de empleos de las mejores empresas de todo el mundo</p>
         </article>
-
         <article>
           <svg fill="currentColor" height="32" viewBox="0 0 256 256" width="32" xmlns="http://www.w3.org/2000/svg"
             aria-hidden="true">
@@ -75,9 +76,8 @@
             </path>
           </svg>
           <h3>Conecta con las mejores empresas</h3>
-          <p>Conecta con empresas que están contratando por tus habilidades.</p>
+          <p>Accede a ofertas exclusivas de empresas lideres en tecnología.</p>
         </article>
-
         <article>
           <svg fill="currentColor" height="32" viewBox="0 0 256 256" width="32" xmlns="http://www.w3.org/2000/svg"
             aria-hidden="true">
@@ -86,31 +86,13 @@
             </path>
           </svg>
           <h3>Obtén el salario que mereces</h3>
-          <p>Obtén el salario que mereces con nuestra calculadora de salarios.</p>
+          <p>Obtén el salario que mereces con nuestra calculadora de salarios</p>
         </article>
       </footer>
-
     </section>
   </main>
-
-  <footer>
+  <footer class="footer">
     <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
-  </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-  <footer style="padding-bottom: 100000px">
-
-  </footer>
+  </footer> 
 </body>
-
 </html>
