--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -66,7 +66,7 @@
           talentos con las empresas más innovadoras.</p>
       </header>
 
-      <footer>
+      <section>
         <article>
           <svg fill="currentColor" height="32" viewBox="0 0 256 256" width="32" xmlns="http://www.w3.org/2000/svg"
             aria-hidden="true">
@@ -99,7 +99,7 @@
           <h3>Obtén el salario que mereces</h3>
           <p>Obtén el salario que mereces con nuestra calculadora de salarios.</p>
         </article>
-      </footer>
+      </section>
 
     </section>
   </main>
